# openbiometrics

./: .gitignore  CLAUDE.md  Dockerfile  README.md  download_models.py  package.json  render.yaml
.claude/: settings.local.json
.claude/agents/: release.md
.github/workflows/: claude-code-review.yml
api/: pyproject.toml
api/app/: main.py  schemas.py
api/app/routes/: __init__.py  admin.py  faces.py  providers.py
docs/: versioning.md
engine/: pyproject.toml
engine/openbiometrics/: __init__.py  config.py
engine/openbiometrics/core/: demographics.py  detector.py  pipeline.py  recognizer.py
engine/openbiometrics/providers/: __init__.py  aws.py  azure.py  base.py  google.py  registry.py
engine/openbiometrics/runtime/: registry.py
sdks/python/: pyproject.toml
sdks/python/openbiometrics_sdk/: __init__.py  client.py
