[project]
name = "openbiometrics-api"
dynamic = ["version"]
description = "OpenBiometrics REST API server"
requires-python = ">=3.10"
dependencies = [
    "openbiometrics-engine",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
]

[tool.setuptools.dynamic]
version = {file = "../VERSION"}

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
openbiometrics-engine = { path = "../engine", editable = true }
