[project]
name = "openbiometrics-engine"
version = "0.3.0"
description = "Open-source biometric engine — face detection, recognition, liveness, quality, demographics"
requires-python = ">=3.10"
dependencies = [
    "onnxruntime>=1.18",
    "opencv-python-headless>=4.10",
    "numpy>=1.26",
    "faiss-cpu>=1.8",
    "pillow>=10.0",
]

[project.optional-dependencies]
gpu = ["onnxruntime-gpu>=1.18"]
legacy = ["insightface>=0.7.3"]
aws = ["boto3>=1.34"]
document = ["python-doctr[torch]>=0.9"]
person = ["ultralytics>=8.2"]
liveness = ["mediapipe>=0.10"]
all = ["openbiometrics-engine[document,person,liveness]"]
cloud = ["openbiometrics-engine[aws]"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
include = ["openbiometrics*"]

[tool.ruff]
line-length = 100
