[project]
name = "openbiometrics"
dynamic = ["version"]
description = "OpenBiometrics Python SDK — face recognition, liveness, and biometric verification"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[tool.setuptools.dynamic]
version = {file = "../../VERSION"}

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
